syntax = "proto2";

option optimize_for = SPEED;

import "osi_version.proto";
import "osi_common.proto";
import "osi_environment.proto";
import "osi_landmark.proto";
import "osi_lane.proto";
import "osi_object.proto";
import "osi_occupant.proto";

package osi;

//
// \brief The ground truth information from the simulation environment.
//
// This ground truth information is supposed to describe the whole simulated
// environment around any simulated vehicle. For each simulated host vehicle
// (there may be one or multiple), define an area around the vehicle which
// is greater than the combined field of views (FOV) of all obstructed sensors 
// in the vehicle. The ground truth data is supposed to describe the convex
// hull of all such areas w.r.t. a global simulation coordinate system.
//
// The simulation coordinate system may change during the simulation if and
// only if all coordinates w.r.t. this coordinate system are also changed.
//
// The data has to be sent at a rate defined by the receiving partner. When
// sending, values with default values might be left default in order to improve
// performance.
//
// To provide a complete interface, all fields of all contained messages must be
// properly set unless specifically stated in the field's definition that the
// field may remain unset.
//
// In enums (e.g. types) the unknown (first / default) value is not allowed to
// be used in the ground truth interface.
//
message GroundTruth
{
    // The interface version used by the sender (i.e. the simulation
    // environment).
    optional InterfaceVersion version = 1;

    // The data timestamp of the simulation environment. The zero time point is
    // arbitrary but must be identical for all messages. 
    // Recommendation: Zero time point for start point of the simulation.
    //
    // \note Zero time point does not need to coincide with the unix epoch. 
    //
    // \note For ground truth data this timestamp coincides both with the
    // notional simulation time the data applies to and the time it was sent
    // (there is no inherent latency for ground truth data, as opposed to
    // sensor data).
    optional Timestamp timestamp = 2;

    // The list of (host) vehicles.
    //
    repeated Vehicle vehicle = 3;

    // The list of all other moving objects (i.e. excluding vehicles).
    //
    repeated MovingObject moving_object = 4;

    // The list of stationary objects (excluding traffic signs and traffic
    // lights).
    repeated StationaryObject stationary_object = 5;

    // The list of traffic signs.
    //
    repeated TrafficSign traffic_sign = 6;

    // The list of traffic lights.
    //
    repeated TrafficLight traffic_light = 7;

    // The list of road surface markings (lane markings are excluded and
    // defined as \c LaneBoundary).
    //
    repeated RoadMarking road_marking = 8;

    // The list of lanes forming a road network.
    //
    repeated Lane lane = 9;

    // The list of lane boundaries from lanes.
    //
    repeated LaneBoundary lane_boundary = 10;

    // The list of passengers in the (host) vehicle(s).
    //
    repeated Occupant occupant = 11;

    // Conditions of the environment.
    //
    optional EnvironmentalConditions environmental_conditions = 12;

    // The real start timestamp of the customized sceniro for simulation. If not set, the simulation start time is 0.
    //
    repeated Timestamp simulation_start_time = 13;

    // The real end timestamp of the customized sceniro for simulation. If not set, the simulation lasts infinite.
    //
    repeated Timestamp simulation_end_time = 14;

    // The flag to validate the current GroundTruth for simulation.
    //
    optional bool valid_scenario_flag = 15;

    // The ISO country code in 3 digit numeric format according to:
    // ISO Code 3166/1 [1,2]. 
    // E.g. Germany = 276, USA = 840.
    //
    // Unit: []
    //
    // \par References: 
    // [1] [International Standard ISO 3166-1: Codes for the representation of names of countries and their subdivisions â€“ Part 1: Country codes, third ed., 2013] (https://www.iso.org/obp/ui/) 
    // [2] [Wikipedia ISO 3166/1] (https://en.wikipedia.org/wiki/ISO_3166-1) 
    optional uint32 country_code = 16;
}
