var hierarchy =
[
    [ "osi3::TrafficAction::AbortActionsAction", "structosi3_1_1TrafficAction_1_1AbortActionsAction.html", null ],
    [ "osi3::TrafficAction::AcquireGlobalPositionAction", "structosi3_1_1TrafficAction_1_1AcquireGlobalPositionAction.html", null ],
    [ "osi3::TrafficAction::ActionHeader", "structosi3_1_1TrafficAction_1_1ActionHeader.html", null ],
    [ "osi3::RadarSensorViewConfiguration::AntennaDiagramEntry", "structosi3_1_1RadarSensorViewConfiguration_1_1AntennaDiagramEntry.html", null ],
    [ "osi3::TrafficSign::SupplementarySign::Classification::Arrow", "structosi3_1_1TrafficSign_1_1SupplementarySign_1_1Classification_1_1Arrow.html", null ],
    [ "osi3::BaseMoving", "structosi3_1_1BaseMoving.html", null ],
    [ "osi3::BaseStationary", "structosi3_1_1BaseStationary.html", null ],
    [ "osi3::MovingObject::PedestrianAttributes::Bone", "structosi3_1_1MovingObject_1_1PedestrianAttributes_1_1Bone.html", null ],
    [ "osi3::LaneBoundary::BoundaryPoint", "structosi3_1_1LaneBoundary_1_1BoundaryPoint.html", null ],
    [ "osi3::BoundingBox", "structosi3_1_1BoundingBox.html", null ],
    [ "osi3::CameraDetection", "structosi3_1_1CameraDetection.html", null ],
    [ "osi3::CameraDetectionData", "structosi3_1_1CameraDetectionData.html", null ],
    [ "osi3::CameraDetectionSpecificHeader", "structosi3_1_1CameraDetectionSpecificHeader.html", null ],
    [ "osi3::CameraPoint", "structosi3_1_1CameraPoint.html", null ],
    [ "osi3::CameraSensorView", "structosi3_1_1CameraSensorView.html", null ],
    [ "osi3::CameraSensorViewConfiguration", "structosi3_1_1CameraSensorViewConfiguration.html", null ],
    [ "osi3::CameraSpecificObjectData", "structosi3_1_1CameraSpecificObjectData.html", null ],
    [ "osi3::DetectedLane::CandidateLane", "structosi3_1_1DetectedLane_1_1CandidateLane.html", null ],
    [ "osi3::DetectedLaneBoundary::CandidateLaneBoundary", "structosi3_1_1DetectedLaneBoundary_1_1CandidateLaneBoundary.html", null ],
    [ "osi3::DetectedTrafficSign::DetectedMainSign::CandidateMainSign", "structosi3_1_1DetectedTrafficSign_1_1DetectedMainSign_1_1CandidateMainSign.html", null ],
    [ "osi3::DetectedMovingObject::CandidateMovingObject", "structosi3_1_1DetectedMovingObject_1_1CandidateMovingObject.html", null ],
    [ "osi3::DetectedOccupant::CandidateOccupant", "structosi3_1_1DetectedOccupant_1_1CandidateOccupant.html", null ],
    [ "osi3::DetectedRoadMarking::CandidateRoadMarking", "structosi3_1_1DetectedRoadMarking_1_1CandidateRoadMarking.html", null ],
    [ "osi3::DetectedStationaryObject::CandidateStationaryObject", "structosi3_1_1DetectedStationaryObject_1_1CandidateStationaryObject.html", null ],
    [ "osi3::DetectedTrafficSign::DetectedSupplementarySign::CandidateSupplementarySign", "structosi3_1_1DetectedTrafficSign_1_1DetectedSupplementarySign_1_1CandidateSupplementarySign.html", null ],
    [ "osi3::DetectedTrafficLight::CandidateTrafficLight", "structosi3_1_1DetectedTrafficLight_1_1CandidateTrafficLight.html", null ],
    [ "osi3::Lane::Classification", "structosi3_1_1Lane_1_1Classification.html", null ],
    [ "osi3::LaneBoundary::Classification", "structosi3_1_1LaneBoundary_1_1Classification.html", null ],
    [ "osi3::Occupant::Classification", "structosi3_1_1Occupant_1_1Classification.html", null ],
    [ "osi3::RoadMarking::Classification", "structosi3_1_1RoadMarking_1_1Classification.html", null ],
    [ "osi3::StationaryObject::Classification", "structosi3_1_1StationaryObject_1_1Classification.html", null ],
    [ "osi3::TrafficLight::Classification", "structosi3_1_1TrafficLight_1_1Classification.html", null ],
    [ "osi3::TrafficSign::MainSign::Classification", "structosi3_1_1TrafficSign_1_1MainSign_1_1Classification.html", null ],
    [ "osi3::TrafficSign::SupplementarySign::Classification", "structosi3_1_1TrafficSign_1_1SupplementarySign_1_1Classification.html", null ],
    [ "osi3::EnvironmentalConditions::CloudLayer", "structosi3_1_1EnvironmentalConditions_1_1CloudLayer.html", null ],
    [ "osi3::ColorCMYK", "structosi3_1_1ColorCMYK.html", null ],
    [ "osi3::ColorDescription", "structosi3_1_1ColorDescription.html", null ],
    [ "osi3::ColorGrey", "structosi3_1_1ColorGrey.html", null ],
    [ "osi3::ColorHSV", "structosi3_1_1ColorHSV.html", null ],
    [ "osi3::ColorLUV", "structosi3_1_1ColorLUV.html", null ],
    [ "osi3::ColorRGB", "structosi3_1_1ColorRGB.html", null ],
    [ "osi3::ColorRGBIR", "structosi3_1_1ColorRGBIR.html", null ],
    [ "osi3::TrafficAction::CustomAction", "structosi3_1_1TrafficAction_1_1CustomAction.html", null ],
    [ "osi3::MotionRequest::DesiredState", "structosi3_1_1MotionRequest_1_1DesiredState.html", null ],
    [ "osi3::MotionRequest::DesiredTrajectory", "structosi3_1_1MotionRequest_1_1DesiredTrajectory.html", null ],
    [ "osi3::DetectedEntityHeader", "structosi3_1_1DetectedEntityHeader.html", null ],
    [ "osi3::DetectedItemHeader", "structosi3_1_1DetectedItemHeader.html", null ],
    [ "osi3::DetectedLane", "structosi3_1_1DetectedLane.html", null ],
    [ "osi3::DetectedLaneBoundary", "structosi3_1_1DetectedLaneBoundary.html", null ],
    [ "osi3::DetectedTrafficSign::DetectedMainSign", "structosi3_1_1DetectedTrafficSign_1_1DetectedMainSign.html", null ],
    [ "osi3::DetectedMovingObject", "structosi3_1_1DetectedMovingObject.html", null ],
    [ "osi3::DetectedOccupant", "structosi3_1_1DetectedOccupant.html", null ],
    [ "osi3::DetectedRoadMarking", "structosi3_1_1DetectedRoadMarking.html", null ],
    [ "osi3::DetectedStationaryObject", "structosi3_1_1DetectedStationaryObject.html", null ],
    [ "osi3::DetectedTrafficSign::DetectedSupplementarySign", "structosi3_1_1DetectedTrafficSign_1_1DetectedSupplementarySign.html", null ],
    [ "osi3::DetectedTrafficLight", "structosi3_1_1DetectedTrafficLight.html", null ],
    [ "osi3::DetectedTrafficSign", "structosi3_1_1DetectedTrafficSign.html", null ],
    [ "osi3::Dimension3d", "structosi3_1_1Dimension3d.html", null ],
    [ "osi3::TrafficCommandUpdate::DismissedAction", "structosi3_1_1TrafficCommandUpdate_1_1DismissedAction.html", null ],
    [ "osi3::HostVehicleData::VehicleAutomatedDrivingFunction::DriverOverride", "structosi3_1_1HostVehicleData_1_1VehicleAutomatedDrivingFunction_1_1DriverOverride.html", null ],
    [ "osi3::TrafficAction::DynamicConstraints", "structosi3_1_1TrafficAction_1_1DynamicConstraints.html", null ],
    [ "osi3::StationaryObject::Classification::EmittingStructureAttribute", "structosi3_1_1StationaryObject_1_1Classification_1_1EmittingStructureAttribute.html", null ],
    [ "osi3::TrafficAction::EndActionsAction", "structosi3_1_1TrafficAction_1_1EndActionsAction.html", null ],
    [ "osi3::EnvironmentalConditions", "structosi3_1_1EnvironmentalConditions.html", null ],
    [ "osi3::ExternalReference", "structosi3_1_1ExternalReference.html", null ],
    [ "osi3::FeatureData", "structosi3_1_1FeatureData.html", null ],
    [ "google::protobuf::FileOptions", null, [
      [ "osi3::FileOptions", "structosi3_1_1FileOptions.html", null ]
    ] ],
    [ "osi3::TrafficAction::FollowPathAction", "structosi3_1_1TrafficAction_1_1FollowPathAction.html", null ],
    [ "osi3::TrafficAction::FollowTrajectoryAction", "structosi3_1_1TrafficAction_1_1FollowTrajectoryAction.html", null ],
    [ "osi3::GenericSensorView", "structosi3_1_1GenericSensorView.html", null ],
    [ "osi3::GenericSensorViewConfiguration", "structosi3_1_1GenericSensorViewConfiguration.html", null ],
    [ "osi3::GeodeticPosition", "structosi3_1_1GeodeticPosition.html", null ],
    [ "osi3::GroundTruth", "structosi3_1_1GroundTruth.html", null ],
    [ "osi3::HostVehicleData", "structosi3_1_1HostVehicleData.html", null ],
    [ "osi3::Identifier", "structosi3_1_1Identifier.html", null ],
    [ "osi3::InterfaceVersion", "structosi3_1_1InterfaceVersion.html", null ],
    [ "osi3::KeyValuePair", "structosi3_1_1KeyValuePair.html", null ],
    [ "osi3::Lane", "structosi3_1_1Lane.html", null ],
    [ "osi3::LaneBoundary", "structosi3_1_1LaneBoundary.html", null ],
    [ "osi3::TrafficAction::LaneChangeAction", "structosi3_1_1TrafficAction_1_1LaneChangeAction.html", null ],
    [ "osi3::LogicalLane::LaneConnection", "structosi3_1_1LogicalLane_1_1LaneConnection.html", null ],
    [ "osi3::TrafficAction::LaneOffsetAction", "structosi3_1_1TrafficAction_1_1LaneOffsetAction.html", null ],
    [ "osi3::Lane::Classification::LanePairing", "structosi3_1_1Lane_1_1Classification_1_1LanePairing.html", null ],
    [ "osi3::LogicalLane::LaneRelation", "structosi3_1_1LogicalLane_1_1LaneRelation.html", null ],
    [ "osi3::TrafficAction::LateralDistanceAction", "structosi3_1_1TrafficAction_1_1LateralDistanceAction.html", null ],
    [ "osi3::LidarDetection", "structosi3_1_1LidarDetection.html", null ],
    [ "osi3::LidarDetectionData", "structosi3_1_1LidarDetectionData.html", null ],
    [ "osi3::LidarSensorView", "structosi3_1_1LidarSensorView.html", null ],
    [ "osi3::LidarSensorViewConfiguration", "structosi3_1_1LidarSensorViewConfiguration.html", null ],
    [ "osi3::LidarSpecificObjectData", "structosi3_1_1LidarSpecificObjectData.html", null ],
    [ "osi3::MovingObject::VehicleClassification::LightState", "structosi3_1_1MovingObject_1_1VehicleClassification_1_1LightState.html", null ],
    [ "osi3::LogicalLaneBoundary::LogicalBoundaryPoint", "structosi3_1_1LogicalLaneBoundary_1_1LogicalBoundaryPoint.html", null ],
    [ "osi3::LogicalDetection", "structosi3_1_1LogicalDetection.html", null ],
    [ "osi3::LogicalDetectionData", "structosi3_1_1LogicalDetectionData.html", null ],
    [ "osi3::LogicalDetectionDataHeader", "structosi3_1_1LogicalDetectionDataHeader.html", null ],
    [ "osi3::LogicalLane", "structosi3_1_1LogicalLane.html", null ],
    [ "osi3::LogicalLaneAssignment", "structosi3_1_1LogicalLaneAssignment.html", null ],
    [ "osi3::LogicalLaneBoundary", "structosi3_1_1LogicalLaneBoundary.html", null ],
    [ "osi3::Route::LogicalLaneSegment", "structosi3_1_1Route_1_1LogicalLaneSegment.html", null ],
    [ "osi3::TrafficAction::LongitudinalDistanceAction", "structosi3_1_1TrafficAction_1_1LongitudinalDistanceAction.html", null ],
    [ "osi3::TrafficSign::MainSign", "structosi3_1_1TrafficSign_1_1MainSign.html", null ],
    [ "osi3::MotionRequest", "structosi3_1_1MotionRequest.html", null ],
    [ "osi3::HostVehicleData::VehiclePowertrain::Motor", "structosi3_1_1HostVehicleData_1_1VehiclePowertrain_1_1Motor.html", null ],
    [ "osi3::MountingPosition", "structosi3_1_1MountingPosition.html", null ],
    [ "osi3::MovingObject", "structosi3_1_1MovingObject.html", null ],
    [ "osi3::MovingObject::MovingObjectClassification", "structosi3_1_1MovingObject_1_1MovingObjectClassification.html", null ],
    [ "osi3::Occupant", "structosi3_1_1Occupant.html", null ],
    [ "osi3::Orientation3d", "structosi3_1_1Orientation3d.html", null ],
    [ "osi3::Pedalry", "structosi3_1_1Pedalry.html", null ],
    [ "osi3::MovingObject::PedestrianAttributes", "structosi3_1_1MovingObject_1_1PedestrianAttributes.html", null ],
    [ "osi3::LogicalLane::PhysicalLaneReference", "structosi3_1_1LogicalLane_1_1PhysicalLaneReference.html", null ],
    [ "osi3::Polygon3d", "structosi3_1_1Polygon3d.html", null ],
    [ "osi3::GroundTruth::ProjFrameOffset", "structosi3_1_1GroundTruth_1_1ProjFrameOffset.html", null ],
    [ "osi3::RadarDetection", "structosi3_1_1RadarDetection.html", null ],
    [ "osi3::RadarDetectionData", "structosi3_1_1RadarDetectionData.html", null ],
    [ "osi3::RadarSensorView", "structosi3_1_1RadarSensorView.html", null ],
    [ "osi3::RadarSensorViewConfiguration", "structosi3_1_1RadarSensorViewConfiguration.html", null ],
    [ "osi3::RadarSpecificObjectData", "structosi3_1_1RadarSpecificObjectData.html", null ],
    [ "osi3::ReferenceLine", "structosi3_1_1ReferenceLine.html", null ],
    [ "osi3::ReferenceLine::ReferenceLinePoint", "structosi3_1_1ReferenceLine_1_1ReferenceLinePoint.html", null ],
    [ "osi3::LidarSensorView::Reflection", "structosi3_1_1LidarSensorView_1_1Reflection.html", null ],
    [ "osi3::RadarSensorView::Reflection", "structosi3_1_1RadarSensorView_1_1Reflection.html", null ],
    [ "osi3::Lane::Classification::RoadCondition", "structosi3_1_1Lane_1_1Classification_1_1RoadCondition.html", null ],
    [ "osi3::RoadMarking", "structosi3_1_1RoadMarking.html", null ],
    [ "osi3::Route", "structosi3_1_1Route.html", null ],
    [ "osi3::Route::RouteSegment", "structosi3_1_1Route_1_1RouteSegment.html", null ],
    [ "osi3::SensorData", "structosi3_1_1SensorData.html", null ],
    [ "osi3::SensorDataSeries", "structosi3_1_1SensorDataSeries.html", null ],
    [ "osi3::SensorDataSeriesList", "structosi3_1_1SensorDataSeriesList.html", null ],
    [ "osi3::SensorDetectionHeader", "structosi3_1_1SensorDetectionHeader.html", null ],
    [ "osi3::SensorView", "structosi3_1_1SensorView.html", null ],
    [ "osi3::SensorViewConfiguration", "structosi3_1_1SensorViewConfiguration.html", null ],
    [ "osi3::UltrasonicSpecificObjectData::Signalway", "structosi3_1_1UltrasonicSpecificObjectData_1_1Signalway.html", null ],
    [ "osi3::SpatialSignalStrength", "structosi3_1_1SpatialSignalStrength.html", null ],
    [ "osi3::TrafficAction::SpeedAction", "structosi3_1_1TrafficAction_1_1SpeedAction.html", null ],
    [ "osi3::LogicalLane::TrafficRule::SpeedLimit", "structosi3_1_1LogicalLane_1_1TrafficRule_1_1SpeedLimit.html", null ],
    [ "osi3::Spherical3d", "structosi3_1_1Spherical3d.html", null ],
    [ "osi3::StatePoint", "structosi3_1_1StatePoint.html", null ],
    [ "osi3::StationaryObject", "structosi3_1_1StationaryObject.html", null ],
    [ "osi3::StreamingUpdate", "structosi3_1_1StreamingUpdate.html", null ],
    [ "osi3::EnvironmentalConditions::Sun", "structosi3_1_1EnvironmentalConditions_1_1Sun.html", null ],
    [ "osi3::TrafficSign::SupplementarySign", "structosi3_1_1TrafficSign_1_1SupplementarySign.html", null ],
    [ "osi3::TrafficAction::TeleportAction", "structosi3_1_1TrafficAction_1_1TeleportAction.html", null ],
    [ "osi3::EnvironmentalConditions::TimeOfDay", "structosi3_1_1EnvironmentalConditions_1_1TimeOfDay.html", null ],
    [ "osi3::Timestamp", "structosi3_1_1Timestamp.html", null ],
    [ "osi3::TrafficAction", "structosi3_1_1TrafficAction.html", null ],
    [ "osi3::TrafficCommand", "structosi3_1_1TrafficCommand.html", null ],
    [ "osi3::TrafficCommandUpdate", "structosi3_1_1TrafficCommandUpdate.html", null ],
    [ "osi3::TrafficLight", "structosi3_1_1TrafficLight.html", null ],
    [ "osi3::LogicalLane::TrafficRule", "structosi3_1_1LogicalLane_1_1TrafficRule.html", null ],
    [ "osi3::LogicalLane::TrafficRule::TrafficRuleValidity", "structosi3_1_1LogicalLane_1_1TrafficRule_1_1TrafficRuleValidity.html", null ],
    [ "osi3::TrafficSign", "structosi3_1_1TrafficSign.html", null ],
    [ "osi3::TrafficSignValue", "structosi3_1_1TrafficSignValue.html", null ],
    [ "osi3::TrafficUpdate", "structosi3_1_1TrafficUpdate.html", null ],
    [ "osi3::LogicalLane::TrafficRule::TrafficRuleValidity::TypeValidity", "structosi3_1_1LogicalLane_1_1TrafficRule_1_1TrafficRuleValidity_1_1TypeValidity.html", null ],
    [ "osi3::UltrasonicDetection", "structosi3_1_1UltrasonicDetection.html", null ],
    [ "osi3::UltrasonicDetectionData", "structosi3_1_1UltrasonicDetectionData.html", null ],
    [ "osi3::UltrasonicDetectionSpecificHeader", "structosi3_1_1UltrasonicDetectionSpecificHeader.html", null ],
    [ "osi3::UltrasonicIndirectDetection", "structosi3_1_1UltrasonicIndirectDetection.html", null ],
    [ "osi3::UltrasonicSensorView", "structosi3_1_1UltrasonicSensorView.html", null ],
    [ "osi3::UltrasonicSensorViewConfiguration", "structosi3_1_1UltrasonicSensorViewConfiguration.html", null ],
    [ "osi3::UltrasonicSpecificObjectData", "structosi3_1_1UltrasonicSpecificObjectData.html", null ],
    [ "osi3::Vector2d", "structosi3_1_1Vector2d.html", null ],
    [ "osi3::Vector3d", "structosi3_1_1Vector3d.html", null ],
    [ "osi3::MovingObject::VehicleAttributes", "structosi3_1_1MovingObject_1_1VehicleAttributes.html", null ],
    [ "osi3::HostVehicleData::VehicleAutomatedDrivingFunction", "structosi3_1_1HostVehicleData_1_1VehicleAutomatedDrivingFunction.html", null ],
    [ "osi3::HostVehicleData::VehicleBasics", "structosi3_1_1HostVehicleData_1_1VehicleBasics.html", null ],
    [ "osi3::HostVehicleData::VehicleBrakeSystem", "structosi3_1_1HostVehicleData_1_1VehicleBrakeSystem.html", null ],
    [ "osi3::MovingObject::VehicleClassification", "structosi3_1_1MovingObject_1_1VehicleClassification.html", null ],
    [ "osi3::HostVehicleData::VehicleLocalization", "structosi3_1_1HostVehicleData_1_1VehicleLocalization.html", null ],
    [ "osi3::HostVehicleData::VehicleMotion", "structosi3_1_1HostVehicleData_1_1VehicleMotion.html", null ],
    [ "osi3::HostVehicleData::VehiclePowertrain", "structosi3_1_1HostVehicleData_1_1VehiclePowertrain.html", null ],
    [ "osi3::HostVehicleData::VehicleSteering", "structosi3_1_1HostVehicleData_1_1VehicleSteering.html", null ],
    [ "osi3::VehicleSteeringWheel", "structosi3_1_1VehicleSteeringWheel.html", null ],
    [ "osi3::HostVehicleData::VehicleWheels", "structosi3_1_1HostVehicleData_1_1VehicleWheels.html", null ],
    [ "osi3::SensorData::VirtualDetectionArea", "structosi3_1_1SensorData_1_1VirtualDetectionArea.html", null ],
    [ "osi3::WavelengthData", "structosi3_1_1WavelengthData.html", null ],
    [ "osi3::HostVehicleData::VehicleWheels::WheelData", "structosi3_1_1HostVehicleData_1_1VehicleWheels_1_1WheelData.html", null ],
    [ "osi3::MovingObject::VehicleAttributes::WheelData", "structosi3_1_1MovingObject_1_1VehicleAttributes_1_1WheelData.html", null ],
    [ "osi3::EnvironmentalConditions::Wind", "structosi3_1_1EnvironmentalConditions_1_1Wind.html", null ]
];